--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
             <a href="/"><img src="/img/logo.png" alt="" class="logo"></a>
             <a class="home" href="/">Home Page <i class="fas fa-home"></i></a>
             <a class="meal" href="/package">All Package Listing</a>
-            <a class="cart" href="/welcome">Cart <i class="fas fa-shopping-cart"></i></a>
+            <a class="cart" href="">Cart <i class="fas fa-shopping-cart"></i></a>
             <a class="user" href="/signin">Sign in <i class="far fa-user"></i></a>
             <a href="javascript:void(0);" class="icon" onclick="responsive()">
                 <i class="fa fa-bars"></i>
