--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -4,4 +4,6 @@
     <h2>We thank you for trusting our service</h2>
 
     <h4>We will send you a confirmation email</h4>
+
+    <a href="/package">View Packages</a>
 </div>
