--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,6 +1,6 @@
 <div class="forms">
     <div class="signin">
-      <form action="">
+      <form action="/signin" method="POST">
         <fieldset>
           <legend><b>Customer Sign In</b></legend>
           <div class="formicon">
