--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,9 +19,26 @@
             <a href="/"><img src="/img/logo.png" alt="" class="logo"></a>
             <a class="home" href="/">Home Page <i class="fas fa-home"></i></a>
             <a class="meal" href="/package">All Package Listing</a>
+
+            {{#if user}}
             <a class="cart" href="">Cart <i class="fas fa-shopping-cart"></i></a>
+            {{/if}}
+
+            
+            {{#if login}}
             <a class="user" id="user" href="/signin">Sign in <i class="far fa-user"></i></a>
+            {{/if}}
+
+            {{#if admin}}
+            <a class="list" id="list" href="/list">Meal List <i class="far fa-list-alt"></i></a>
+            <a class="add" id="add" href="/add">Add Meal <i class="far fa-plus-square"></i></a>
+            {{/if}}
+
+            
+
+            {{#if logout}}
             <a class="logout" id="logout" href="/logout">Log Out <i class="fas fa-sign-out-alt"></i></a>
+            {{/if}}
             <a href="javascript:void(0);" class="icon" onclick="responsive()">
                 <i class="fa fa-bars"></i>
             </a>
