--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -43,7 +43,7 @@
     {{#each data}}
     <div class="item-card">
         <div class="item-photo">
-            <img src="/img/{{this.image}}" alt="">
+            <img src="{{this.url}}" alt="">
         </div>
 
         <div class="topitem-info">
