--- a/views/package.handlebars
+++ b/views/package.handlebars
@@ -14,7 +14,7 @@
 
     <div class="item-card">
         <div class="item-photo">
-            <img src="/img/{{this.image}}" alt="">
+            <img src="{{this.url}}" alt="">
         </div>
 
         <div class="item-info">
@@ -23,6 +23,5 @@
             <p><b>${{this.price}}</b></p>
         </div>
     </div>
-
     {{/each}}
 </div>
