--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -63,6 +63,9 @@
           pattern="[a-zA-Z0-9].{6,12}" title="Password must be 6-12 characters and must have letters and numbers only.">
           <p id="passworderrorup"></p>
 
+          <label for="urlup"><b>Image Url:</b></label>
+          <input type="url" name="urlup" id="urlup" placeholder="URL..."required>
+
           <input type="submit" name="submit" id="" value="Sign Up" onclick="SignUpValidation()">
 
         </fieldset>
