--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,11 +19,6 @@
             <a href="/"><img src="/img/logo.png" alt="" class="logo"></a>
             <a class="home" href="/">Home Page <i class="fas fa-home"></i></a>
             <a class="meal" href="/package">All Package Listing</a>
-
-            {{#if user}}
-            <a class="cart" href="">Cart <i class="fas fa-shopping-cart"></i></a>
-            {{/if}}
-
             
             {{#if login}}
             <a class="login" id="login" href="/signin">Sign in <i class="far fa-user"></i></a>
@@ -34,11 +29,10 @@
             <a class="add" id="add" href="/add">Add Meal <i class="far fa-plus-square"></i></a>
             {{/if}}
 
-            
-
             {{#if logout}}
             {{#each user}}
             <a class="user" id="user" href="/dashboard">{{this.firstName}}<img src="{{this.img}}" alt=""></a>
+            <a class="cart" id="cart" href="/cart">Cart <i class="fas fa-shopping-cart"></i></a>
             <a class="logout" id="logout" href="/logout">Log Out <i class="fas fa-sign-out-alt"></i></a>
             {{/each}}
             {{/if}}
