--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -64,7 +64,7 @@
           <p id="passworderrorup"></p>
 
           <label for="urlup"><b>Image Url:</b></label>
-          <input type="url" name="urlup" id="urlup" placeholder="URL..."required>
+          <input type="url" name="urlup" id="urlup" placeholder="URL...">
 
           <input type="submit" name="submit" id="" value="Sign Up" onclick="SignUpValidation()">
 
